Set JDK target to JDK 11, and updated GlassFish used.
Added add-opens to surefire, since the mocking needs this now.

Signed-off-by: arjantijms <arjan.tijms@gmail.com>